--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
 		"b13/bolt": "^2.0",
 		"b13/content-sync": "^1.0",
 		"b13/cta": "^1",
-		"b13/demologin": "dev-master",
+		"b13/demologin": "dev-main",
 		"b13/faq-t3demo": "dev-master",
 		"b13/menus": "dev-master",
 		"b13/picture": "^1.0",
