--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
 	},
 	"require": {
 		"php": "^7.4",
+		"apache-solr-for-typo3/solr": "^11.2",
 		"b13/assetcollector": "^1.4",
 		"b13/bolt": "^2.0",
 		"b13/content-sync": "^1.1",
