--- a/config/sites/main/config.yaml
+++ b/config/sites/main/config.yaml
@@ -36,6 +36,7 @@ languages:
     direction: ltr
     flag: us
     websiteTitle: ''
+    solr_core_read: core_en
   -
     title: German
     enabled: true
@@ -51,6 +52,7 @@ languages:
     websiteTitle: ''
     fallbackType: strict
     fallbacks: ''
+    solr_core_read: core_de
   -
     title: Hebrew
     enabled: true
@@ -66,10 +68,13 @@ languages:
     fallbacks: ''
     flag: il
     languageId: 2
+    solr_enabled_read: false
 rootPageId: 1
 routeEnhancers:
   PageTypeSuffix:
     type: PageType
+    default: '/'
+    index: ''
     map:
       resettimer.html: 1603464133342
       sitemap.xml: 1533906435
@@ -82,5 +87,14 @@ routes:
     route: google34eb0c66f374609a.html
     type: staticText
     content: 'google-site-verification: google34eb0c66f374609a.html'
+settings:
+  pages:
+    search: 146
 sitePackage: site_t3demo
+solr_enabled_read: true
+solr_host_read: '%env(SOLR_HOST)%'
+solr_path_read: /
+solr_port_read: '8983'
+solr_scheme_read: http
+solr_use_write_connection: false
 websiteTitle: ''
