--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -15,6 +15,8 @@ use_dns_when_possible: true
 composer_version: ""
 web_environment:
   - SOLR_HOST=ddev-demo.typo3.org-solr
+  - SOLR_PORT=8983
+  - SOLR_SCHEME=http
 typo3_solr_cores:
   - { name: core_en, schema: "english/schema.xml" }
   - { name: core_de, schema: "german/schema.xml" }
