--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 		"bin-dir": "bin",
 		"sort-packages": true,
 		"platform": {
-			"php": "7.4.12"
+			"php": "8.1.16"
 		},
 		"allow-plugins": {
 			"helhum/dotenv-connector": true,
@@ -30,51 +30,51 @@
 		}
 	},
 	"require": {
-		"php": "^7.4",
-		"apache-solr-for-typo3/solr": "^11.5",
-		"b13/assetcollector": "^1.4",
-		"b13/backendpreviews": "^0.1.18",
-		"b13/bolt": "^2.0",
-		"b13/content-sync": "^1.1",
-		"b13/cta": "^1",
+		"php": "^8.1",
+		"apache-solr-for-typo3/solr": "dev-main",
+		"b13/assetcollector": "^2.0.2",
+		"b13/backendpreviews": "^1.0",
+		"b13/bolt": "^2.3.0",
+		"b13/content-sync": "dev-master",
+		"b13/cta": "^2.0.0",
 		"b13/demologin": "*",
-		"b13/doktypemapper": "^1.0",
-		"b13/faq-t3demo": "*",
-		"b13/menus": "dev-master",
-		"b13/picture": "^1.0",
+		"b13/doktypemapper": "^1.1.1",
+		"b13/faq-t3demo": "@dev",
+		"b13/menus": "^1.0.1",
+		"b13/picture": "^2.0.2",
 		"b13/site-t3demo": "*",
-		"brotkrueml/schema": "^1.10",
+		"brotkrueml/schema": "^v2.8.0",
 		"helhum/dotenv-connector": "^3.0",
-		"helhum/typo3-console": "^7.0",
-		"ichhabrecht/content-defender": "^3.2",
-		"ichhabrecht/filefill": "^4.1",
-		"typo3/cms-about": "^11.5",
-		"typo3/cms-backend": "^11.5",
-		"typo3/cms-belog": "^11.5",
-		"typo3/cms-beuser": "^11.5",
-		"typo3/cms-core": "^11.5",
-		"typo3/cms-dashboard": "^11.5",
-		"typo3/cms-extbase": "^11.5",
-		"typo3/cms-extensionmanager": "^11.5",
-		"typo3/cms-felogin": "^11.5",
-		"typo3/cms-filelist": "^11.5",
-		"typo3/cms-filemetadata": "^11.5",
-		"typo3/cms-fluid": "^11.5",
-		"typo3/cms-fluid-styled-content": "^11.5",
-		"typo3/cms-form": "^11.5",
-		"typo3/cms-frontend": "^11.5",
-		"typo3/cms-info": "^11.5",
-		"typo3/cms-install": "^11.5",
-		"typo3/cms-lowlevel": "^11.5",
-		"typo3/cms-recordlist": "^11.5",
-		"typo3/cms-redirects": "^11.5",
-		"typo3/cms-reports": "^11.5",
-		"typo3/cms-rte-ckeditor": "^11.5",
-		"typo3/cms-scheduler": "^11.5",
-		"typo3/cms-seo": "^11.5",
-		"typo3/cms-setup": "^11.5",
-		"typo3/cms-tstemplate": "^11.5",
-		"typo3/cms-viewpage": "^11.5"
+		"helhum/typo3-console": "^8.0",
+		"ichhabrecht/content-defender": "dev-main",
+		"ichhabrecht/filefill": "^4.3",
+		"typo3/cms-about": "^12.4",
+		"typo3/cms-backend": "^12.4",
+		"typo3/cms-belog": "^12.4",
+		"typo3/cms-beuser": "^12.4",
+		"typo3/cms-core": "^12.4",
+		"typo3/cms-dashboard": "^12.4",
+		"typo3/cms-extbase": "^12.4",
+		"typo3/cms-extensionmanager": "^12.4",
+		"typo3/cms-felogin": "^12.4",
+		"typo3/cms-filelist": "^12.4",
+		"typo3/cms-filemetadata": "^12.4",
+		"typo3/cms-fluid": "^12.4",
+		"typo3/cms-fluid-styled-content": "^12.4",
+		"typo3/cms-form": "^12.4",
+		"typo3/cms-frontend": "^12.4",
+		"typo3/cms-info": "^12.4",
+		"typo3/cms-install": "^12.4",
+		"typo3/cms-lowlevel": "^12.4",
+		"typo3/cms-recordlist": "^12.4",
+		"typo3/cms-redirects": "^12.4",
+		"typo3/cms-reports": "^12.4",
+		"typo3/cms-rte-ckeditor": "^12.4",
+		"typo3/cms-scheduler": "^12.4",
+		"typo3/cms-seo": "^12.4",
+		"typo3/cms-setup": "^12.4",
+		"typo3/cms-tstemplate": "^12.4",
+		"typo3/cms-viewpage": "^12.4"
 	},
 	"scripts": {
 		"frontend-builds": [
