--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,8 +84,8 @@ build:php:
     GIT_STRATEGY: none
     TARGET_HOSTS: ""
   script:
-    - composer global require deployer/deployer:6.8.0 deployer/recipes:6.2.2 --dev $composer_options
-    - /tmp/vendor/bin/dep --file=./build/deploy.php deploy -vv --hosts=${TARGET_HOSTS}
+    - composer global require deployer/deployer:7.3.1 --dev $composer_options
+    - /tmp/vendor/bin/dep --file=./build/deploy.php deploy -vv ${TARGET_HOSTS}
 
 
 # In the future, it would be great if this build step could run at the same time as the PHP build, which is not possible
@@ -112,7 +112,7 @@ deploy:production:
   <<: *deploy
   stage: deploy
   variables:
-    TARGET_HOSTS: "main,contentmaster"
+    TARGET_HOSTS: "production,contentmaster"
   only:
     - tags
     - main
